<resources>
    <string name="app_name">Remember Everything</string>

    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="register">or register, if you are new here</string>
    <string name="success_login">Log in successful!</string>
    <string name="to_reg">Register</string>

    <string name="choice_what_to_add">Select the note type:</string>
    <string name="choice_1">Date</string>
    <string name="choice_2">Translate</string>
    <string name="choice_3">Definition</string>
    <string name="word">Type your word to remember:</string>
    <string name="date">Type your date to remember:</string>
    <string name="period">Enter period between 2 dates</string>
    <string name="repeat">Repeat password</string>

    <string name="hint_term">Term place</string>
    <string name="hint_word">Word place</string>
    <string name="hint_def">Enter term definition here</string>
    <string name="remember_it">Remember it</string>

    <string name="reg_success">Registration successful!</string>
    <string name="used_name">That login is used already</string>
    <string name="reg_alert">Make sure that passwords are the same!</string>

    <string name="date_add">Date was successfully added</string>
    <string name="def_add">Definition was successfully added</string>
    <string name="translate_add">Translate was successfully added</string>

    <string name="translate">Translate</string>
    <string name="add_to_DB">Save</string>

    <string name="french">french</string>
    <string name="czech">czech</string>
    <string name="ukrainian">ukrainian</string>
    <string name="spanish">spanish</string>
    <string name="italian">italian</string>
    <string name="german">german</string>
    <string name="polish">polish</string>
    <string name="english">english</string>
    <string name="swedish">swedish</string>
    <string name="russian">russian</string>

    <string name="_french">french</string>
    <string name="_czech">czech</string>
    <string name="_ukrainian">ukrainian</string>
    <string name="_spanish">spanish</string>
    <string name="_italian">italian</string>
    <string name="_german">german</string>
    <string name="_polish">polish</string>
    <string name="_english">english</string>
    <string name="_swedish">swedish</string>
    <string name="_russian">russian</string>

    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>

    <string name="question_1">How many years the specified event lasted?</string>
    <string name="question_2">When this event started?</string>
    <string name="question_3">When the event was over?</string>
    <string name="question_4">Specify the period in which concluded the event</string>
    <string name="question_single">When this event happened?</string>

    <string name="from">From</string>
    <string name="to">to</string>
    <string name="language">language</string>
    <string name="_language">language</string>
    <string name="result">Translate</string>
</resources>
