<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word"
        android:id="@+id/wordView"
        android:layout_gravity="center_horizontal"
        android:textColor="#9e9e9e"
        android:visibility="visible"
        android:layout_marginTop="80dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/wordText"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_term"
        android:visibility="visible"
        android:background="@drawable/frame"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_weight="0"
        android:gravity="center" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:ems="10"
        android:id="@+id/defText"
        android:gravity="top"
        android:hint="@string/hint_def"
        android:visibility="visible"
        android:inputType="text"
        android:background="@drawable/big_frame"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="35dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <ImageButton
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:text="@string/remember_it"
            android:id="@+id/send"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:background="@drawable/button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/remember_it"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <ImageButton
        style="@style/Base.Theme.AppCompat.Light"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="back"
        android:id="@+id/back"
        android:layout_gravity="center_horizontal"
        android:onClick="getBack"
        android:background="@drawable/back_btn"
        android:layout_marginTop="20dp"
        android:theme="@style/AppTheme" />

</LinearLayout>