<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:id="@+id/loginView"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginEdit"
        android:layout_below="@+id/loginView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/passView"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/loginEdit"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passEdit"
        android:layout_below="@+id/passView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/checkBox"
        android:layout_below="@+id/passEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:checked="false"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:id="@+id/enterButton"
            android:onClick="toLogin" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="G+"
            android:id="@+id/GPlus" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VK"
            android:id="@+id/VK" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/textView2"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="15sp"
            android:textColor="#1A0DAB"
            android:clickable="true"
            android:onClick="toRegister"
            />

    </LinearLayout>

</RelativeLayout>
