<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".LoginActivity"
    >

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/loginEdit"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/login"
        android:layout_marginTop="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/passEdit"
        android:layout_alignStart="@+id/passEdit"
        android:background="@drawable/frame"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passEdit"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/loginEdit"
        android:hint="@string/password"
        android:layout_marginTop="25dp"
        android:background="@drawable/frame"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passEdit2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/loginEdit"
        android:hint="@string/repeat"
        android:background="@drawable/frame"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passEdit2"
        android:layout_alignLeft="@+id/passEdit2"
        android:layout_alignStart="@+id/passEdit2"
        android:layout_marginTop="20dp">

        <ImageButton
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:text="@string/to_reg"
            android:id="@+id/registerButton"
            android:onClick="toLogin"
            android:layout_gravity="center"
            android:layout_below="@+id/passEdit2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/to_reg"
            android:id="@+id/textView3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@android:color/background_light"/>
    </FrameLayout>

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/imageView2"
        android:background="@drawable/user"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="false"/>

</RelativeLayout>
