<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_what_to_add"
        android:id="@+id/choiceView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:textColor="#2c2020"/>

    <Spinner
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/typeSpinner"
        android:layout_gravity="center"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:contextClickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word"
        android:id="@+id/wordView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#2c2020"
        android:visibility="visible"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/wordText"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_word"
        android:visibility="visible"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:layout_marginTop="30dp">

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/day"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:id="@+id/sep_1"
            android:textSize="30sp"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/month"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:id="@+id/sep_2"
            android:textSize="30sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/year"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="visible">

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/day_2"
            android:textSize="30sp"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:id="@+id/sep_3"
            android:textSize="30sp"
            android:visibility="invisible"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/month_2"
            android:textSize="30sp"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:id="@+id/sep_4"
            android:textSize="30sp"
            android:visibility="invisible"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/year_2"
            android:textSize="30sp"
            android:visibility="invisible"/>
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period"
        android:id="@+id/period_box"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="47dp"/>

</LinearLayout>